# AriScript

./: CMakeLists.txt  README.md
include/: ast.h  ast_classes.h  ast_utils.h  chunk.h  debug.h  def_literal.h  error_handler.h  global_types.h  interpreter.h  parser.h  tokenizer.h  type.h  value.h  virtual_machine.h
scripts/: classes_data.txt  gen_ast_classes.py  gen_productions.py  productions.txt
src/: CMakeLists.txt  debug.cpp  error_handler.cpp  interpreter.cpp  main.cpp  tokenizer.cpp  value.cpp
tests/: CMakeLists.txt  test_main.cpp
